--- a/semana7/src/spa-caooh.html
+++ b/semana7/src/spa-caooh.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/preloader.css">
     <link rel="stylesheet" href="../css/galeria.css">
     <link rel="stylesheet" href="../css/subir.css">
+    <link rel="stylesheet" href="../css/contactos.css">
     <!--Iconos  -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Favicon -->
@@ -82,6 +83,35 @@
             <button onclick="adelante()" >>></button>
         </article>
         </section>
+
+    <!-- NUEVO 09/08/2023 -->
+    <div class="fondo-aside">
+        <h2 class="text-aside">CONTACTANOS</h2>
+        <div class="aside">
+            <aside></aside>
+            <aside>
+                <div class="form">
+                    <h3>Dejanos un Mensaje</h3>
+                    <form action="envio.php" method="POST">
+                        <p>Apellidos y Nombres</p>
+                        <input type="text" name="nombres" id="" required>
+                        <br>
+                        <P>Correo Electronico</P>
+                        <input type="email" name="correo" id="" required>
+                        <br>
+                        <P>Celular</P>
+                        <input type="number" name="celular" id="" required>
+                        <br>
+                        <P>Comentarios</P>
+                        <textarea name="comentarios" rows="10"></textarea>
+                        <br>
+                        <input type="submit" value="ENVIAR">
+                    </form>
+                </div>
+            </aside>
+        </div>
+
+    </div>
     <script src="../js/script.js"></script>
 </body>
 </html>
